test/negative/invariant3.mli.expected

*******************************
********** Parsed file ********
*******************************
type t = (int * int)[@@gospel {| invariant 1 > 0 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

type t = (int * int)
  (*@ invariant ...
       *)
File "invariant3.mli", line 1, characters 0-51:
Error: Invariant on non-private type t
